020304 release
--------------

fixed a bug in the VariableBundle which made it so backslashes weren't
handled properly.  this caused file selection under windows to fail 
horribly.

added support for dynamically switching between LookAndFeels.

clicking Ok on a property editor now saves the current properties to disk.
this means that you no longer have to exit out of pooka cleanly in order to
have your changes save.

fixed an ArrayIndexOutOfBoundsException if you right-clicked on an entry
in the AttachmentPane that wasn't selected.

fixed a bug where the ExternalLauncher wasn't executing correctly if there
was no wrapper specified.  this resulted in the inability to open attachments
on windows.

fixed a bug where the StoreNode and FolderNode were each updating their
gui components on the mail thread, rather than on the swint eventdispatcher
thread.

added a new default mailcap file, either '.pooka_mailcap' or 
'pooka_mailcap.txt'.  set it up so this file is the one written to by
default.  also reset the 'make command default' so that it actually works
properly.

added more spacing between the headers and the message on html messages.

added an icon for Pooka, and made it change icons when new messages come in.
	BUG:    the Pooka icon doesn't look great when it's made very small,
		and the new message icon is just perfunctory.  should get
		new ones.

improved the startup time for Multi Editor panes.

added support for custom colors and components for most (if not all) 
components.

added a Color selector and a Font selector.

made file->exit check for unsent messages and offer you a chance to send
them.  (BUG:  doesn't work properly under jdk1.2)

added saving messages as drafts (BUG:  doesn't work properly under jdk1.2)

Outbox no longer throws a NPE if the Outbox is not yet open.

added support for specifying SMTP port number (dan)

folder menu now uses submenus to display folders instead of one huge menu (dan)
